update ui + add const

--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1433,7 +1433,7 @@ iframe {
 /*[ Slick2 ]
 -----------------------------------------------------------
 */
-.wrap-slick2 {
+.block2-imgwrap-slick2 {
   position: relative;
   margin-right: -15px;
   margin-left: -15px;
